# socially-store-robot

./: .gitignore  .gitmodules  README.md  auto_open.sh  run_docker.sh
catkin_ws/src/multi_object_tracking/launch/: mot2d_sim.launch
doc/: .~lock.note.ods#  alias.txt  build.txt  command_list.txt  command_ok.md  git_and_docker_push_command.txt  note.ods  plotTest.py  rosgraph.dot
mars_lite_remote_ws/src/mars_lite_description/: CMakeLists.txt  LICENSE  package.xml
mars_lite_remote_ws/src/mars_lite_description/urdf/: mars_lite.urdf.xacro  mars_lite_with_gripper.urdf.xacro  tm700_robot.urdf.xacro  tm700_robot_with_gripper.urdf.xacro
mars_lite_remote_ws/src/rviz_config/: basic.rviz  moveit_test.rviz  navi.rviz
mars_lite_remote_ws/src/rviz_panel/: CMakeLists.txt  package.xml  plugin_description.xml
mars_lite_remote_ws/src/rviz_panel/src/: ready_tool.cpp  ready_tool.h
mars_lite_remote_ws/src/tm_description/launch/: rviz_config.rviz  rviz_display.launch
mars_lite_remote_ws/src/tm_description/urdf/: tm700.urdf.xacro  tm900.urdf.xacro
mars_ws/: compile_py36.sh
mars_ws/src/mars_lite_description/: CMakeLists.txt
mars_ws/src/mars_lite_description/launch/: init_pose.launch  mars_gazebo.launch  spawn_mars.launch
mars_ws/src/mars_lite_description/meshes/: d415_lite.stl  mob_plat.dae  wheel.dae
mars_ws/src/mars_lite_description/src/: initial_pose.cpp
mars_ws/src/mars_lite_description/urdf/: macros.xacro  mars_lite.gazebo  mars_lite_with_gripper.urdf.xacro
mars_ws/src/mars_lite_description/worlds/: 123.world  aisle.world  (+3 more)
mars_ws/src/mars_lite_moveit_config/: CMakeLists.txt  package.xml
mars_ws/src/tmr_ros1_simplified_edition/: README.md
yolo_ws/: .rosinstall.bak
yolo_ws/src/scan/: CMakeLists.txt  package.xml  subgoal_timer_interval.rviz
(+146 files in other folders)
