<?xml version="1.0"?>
<package>
  <name>rviz_panel</name>
  <version>0.0.0</version>
  <description>The rviz_panel package</description>


  <maintainer email="daniel.reyes@itri.org.tw">Daniel Reyes</maintainer>
  <license>BSD 3-Clause</license>
  <author>Daniel Reyes</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rviz plugin="${prefix}/plugin_description.xml"/>  
    
  </export>
</package>
